--- a/index.html
+++ b/index.html
@@ -575,6 +575,28 @@
                           </div>
                         </div>
 
+                        <!-- SINGLE 05 -->
+                        <div>
+                          <p>
+                            <div class="col-10 m-1 text-center py-2 link-music">
+                              <a data-bs-toggle="collapse" href="#single05" role="button" aria-expanded="false" aria-controls="single05">[Single] Tak Terulang</a>
+                            </div>
+                          </p>
+                          <div class="collapse" id="single05">
+                            <div id="single5">
+                              <div class="row">
+                                  <div class="col-md-2 m-1 py-2"><img src="img/music/Single05.png" alt="Tak Terulang by Toni Rams"></div>
+                                  <div class="col-md-8 m-1 py-2">
+                                      <h4>Tak Terulang</h4>
+                                      <p><b>Tanggal Rilis </b>21 Juli 2023 <br> <b>Durasi </b>3:35 <br> <b>Kategori </b>Single</p>
+                                      <p>Akhirnya saya memberanikan diri untuk mencoba membuat lagu berbahasa Indonesia, dan genrenya kali ini adalah pop. Bisa dibilang sih, bahwa album instrumental <b>Melody To Rise</b> jadi gambaran kalau saya bakalan beralih sejenak ke genre pop, dan single ini menjadi teaser tipis-tipis terkait rilisan berikutnya.</p>
+                                  </div>
+                              </div>
+                            </div>
+                            <hr>
+                          </div>
+                        </div>
+                        
                     </div>
             
 
