--- a/index.html
+++ b/index.html
@@ -597,6 +597,84 @@
                           </div>
                         </div>
                         
+                        <!-- ALBUM 05 -->
+                        <div>
+                          <p>
+                            <div class="col-10 m-1 text-center py-2 link-music">
+                              <a data-bs-toggle="collapse" href="#album05" role="button" aria-expanded="false" aria-controls="album05">[LP] Tentang Apa Semua Ini</a>
+                            </div>
+                          </p>
+                          <div class="collapse" id="album05">
+                            <div id="album5">
+                              <div class="row">
+                                  <div class="col-md-2 m-1 py-2"><img src="img/music/LP03.png" alt="Tentang Apa Semua Ini by Toni Rams"></div>
+                                  <div class="col-md-8 m-1 py-2">
+                                      <h4>Tentang Apa Semua Ini</h4>
+                                      <p><b>Tanggal Rilis </b>19 Agustus 2023 <br> <b>Durasi </b>29:16 <br> <b>Kategori </b>LP</p>
+                                      <p>Ini adalah album pertama saya yang menyertakan judul dan lirik-lirik berbahasa Indonesia. Selain itu, saya mencoba genre yang berbeda di album ini, yakni pop, elektronik, apapun orang-orang menyebutnya. Ada dua lagu yang sudah saya buat sejak tahun 2020, yaitu <b>The Uncertainty</b> dan <b>I.M.Y.</b> Trek <b>The Uncertainty</b> melibatkan salah satu teman band saya, <b>Ardo Wijaya Putra</b>, sebagai penulis chordnya karena saat itu saya bingung lagu ini akan dibuat seperti apa, dan secara otomatis lagu ini masuk di list rencana lagu untuk band saya kala itu, <b>Waiting Too Long</b>. Namun, lagu ini terbengkalai hingga akhirnya saya masukkan ke album ini. Seluruhnya merupakan lirik lagu dengan tema kebencian, kekecewaan, pasrah, yang tak jauh dari suasana hati.</p>
+
+                                      <table class="table">
+                                          <thead>
+                                            <tr>
+                                              <th scope="col">#</th>
+                                              <th scope="col">Judul Lagu</th>
+                                              <th scope="col">Durasi</th>
+                                            </tr>
+                                          </thead>
+                                          <tbody>
+                                            <tr>
+                                              <th scope="row">1</th>
+                                              <td>Tipu Daya (Dia Tak Menangis)</td>
+                                              <td>4:47</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">2</th>
+                                              <td>Berjalan Sendiri</td>
+                                              <td>3:58</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">3</th>
+                                              <td>Tak Terulang</td>
+                                              <td>3:35</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">4</th>
+                                              <td>The Uncertainty</td>
+                                              <td>2:41</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">5</th>
+                                              <td>I.M.Y.</td>
+                                              <td>2:30</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">6</th>
+                                              <td>Whisper In Childhood Memories (Interlude)</td>
+                                              <td>1:50</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">7</th>
+                                              <td>Cinta Obsesif</td>
+                                              <td>5:27</td>
+                                            </tr>
+                                            <tr>
+                                              <th scope="row">8</th>
+                                              <td>Selamanya</td>
+                                              <td>4:28</td>
+                                            </tr>
+                                            <tr>
+                                              <th colspan="2">Total</th>
+                                              <td ><b>29:16</b> </td>
+                                            </tr>
+                                          </tbody>
+                                      </table>
+                                  </div>
+                              </div>
+                            </div>
+                            <hr>
+                          </div>
+                        </div>
+
                     </div>
             
 
